--- a/static/pneumatic.scss
+++ b/static/pneumatic.scss
@@ -42,11 +42,11 @@ table { border-collapse: collapse; border-spacing: 0; }
 // Typography
 
 body {
-	background: #fff;
+	background: #F7FAFC;
 	font-family: $main-font;
 	font-size: 12px;
 	line-height: 1.6;
-	color: #222;
+	color: #1A202C;
 	-webkit-font-smoothing: antialiased;
 	-webkit-text-size-adjust: 100%;
 }
@@ -54,6 +54,7 @@ body {
 article p {
 	margin: 1.25em 0;
 	line-height: 1.9;
+	font-size: 14px;
 }
 
 h1, h2, h3 { font-weight: bold; }
@@ -264,6 +265,7 @@ aside div {
 	display: block;
 	width: 140px;
 	border-radius: 15px;
+	border: 2px solid #EDF2F7;
 }
 
 #name {
